# pollution

./: README.md
.github/workflows/: main.yml
coin/: .env.example  .gitignore  README.md  bun.lockb  hardhat.config.ts  package.json  tsconfig.json
coin/contracts/: Constants.sol  PollutionMine.sol  PollutionToken.sol
coin/contracts/mine/: Mine.sol  MinteableToken.sol
coin/contracts/mine/interfaces/: IMine.sol  IMinteableToken.sol
coin/contracts/mine/utils/: ProofOfWork.sol  Reward.sol
coin/contracts/mocks/: PollutionMineMock.sol  ProofOfWorkMock.sol  RewardMock.sol
coin/scripts/: deploy-local.ts
coin/test/: deployment-script.ts  minteable-token.ts  pollution-mine.ts  pollution-token.ts  proof-of-work-library.ts  reward-library.ts
coin/test/helpers/: deployment.ts  read-const.ts
landing/: .gitignore  README.md  bun.lockb  package.json  wrangler.toml
landing/src/: entry-worker.tsx  entry.tsx  router.tsx
landing/src/component/: waypoint.tsx
landing/src/component/body/: index.tsx
landing/src/component/header/: index.tsx  styles.scss
landing/src/component/loading/: index.tsx  styles.scss
landing/src/constant/: address.ts  canonical.ts  reward.ts  token.ts
landing/src/helper/: eth-call.ts  mine-contract.ts  test.ts
landing/src/hook/: stats.ts  toggler.ts
landing/src/style/: color.scss  main.scss  mixin.scss  variable.scss
landing/src/type/: global.d.ts
landing/static/: index.html
miner/: .gitignore  Cargo.toml  dev.sh
miner/src/: block.rs  main.rs  miner.rs  proof_of_work.rs
miner/static/: PollutionMine.json
(+28 files in other folders)
