[package]
name = "pollution-miner"
version = "0.0.1"
authors = []
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.3"
ethcontract = "0.15.3"
tokio = { version = "1.6", features = ["macros"] }
web3 = { version = "0.17.0", default-features = false, features = ["http-rustls-tls"] }
tiny-keccak = "2.0.2"
clap = { version = "4.4.8", features = ["derive"] }
hex = "0.4"
futures = "0.3.15"
crossbeam = "0.8.1"
crossbeam-utils = "0.8.8"
